--- a/funnel/static/sass/_header.scss
+++ b/funnel/static/sass/_header.scss
@@ -48,7 +48,7 @@
 
           .header__site-title__logo {
             height: 24px;
-            margin: 0 auto 3px;
+            margin: 0 auto 5px;
           }
 
           .search-form {
@@ -205,7 +205,7 @@
               height: 28px;
               margin-right: 16px;
               position: relative;
-              top: -2px;
+              top: 1px;
             }
 
             .header__nav-links--search {
